# somerville_happiness

./: README.md  pyproject.toml
data/processed/: .~lock.move_why_coded.csv#  02_target_populations.csv  03_survey_weights.csv  data_2019_preprocessed.csv  data_2019_vars.csv  move_why.csv  move_why_coded.csv  population_weights.csv  survey_data_export.csv  survey_population_hooks.csv  target_populations.csv  weighted_survey_data.csv
data/raw/: Age by Nativity.csv  Household Income.csv  Race and Ethnicity.csv  Wage Distribution.csv
notebooks/: 01_filter_and_rename_survey_data.ipynb  01_preprocess_data.ipynb  01_preprocess_survey_data.ipynb  02_preprocess_census_data.ipynb  03_balance_survey_data.ipynb  03_balance_survey_data_v2.ipynb  04_cross_tabs.ipynb  04_feature_engineering.ipynb  05_combine_data.ipynb  EDA.ipynb  balance_survey_data.ipynb  cross_tabs.ipynb  generalized_survey_raking.ipynb  moving_analysis.ipynb  predict_churn.ipynb
notebooks/.ipynb_checkpoints/: 01_filter_and_rename_survey_data-checkpoint.ipynb  01_preprocess_data-checkpoint.ipynb  01_preprocess_survey_data-checkpoint.ipynb  02_preprocess_census_data-checkpoint.ipynb  03_balance_survey_data-checkpoint.ipynb  04_cross_tabs-checkpoint.ipynb  DEPRECATED_01_preprocess_survey_data-Copy1-checkpoint.ipynb  EDA-checkpoint.ipynb  balance_survey_data-checkpoint.ipynb  predict_churn-checkpoint.ipynb
